@@ -72,10 +72,14 @@
 
 		<maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
 		<compiler.plugin.version>3.12.1</compiler.plugin.version>
-		<assemby.plugin.version>3.6.0</assemby.plugin.version>
-		<ant.plugin.version>3.1.0</ant.plugin.version>
+
 		<frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>
 		<docker-maven-plugin.version>1.2.2</docker-maven-plugin.version>
+		
+		<plugin.maven-jar-plugin.version>3.4.2</plugin.maven-jar-plugin.version>
+		<plugin.maven-javadoc-plugin.version>3.11.2</plugin.maven-javadoc-plugin.version>
+		<plugin.maven-assembly-plugin.version>3.7.1</plugin.maven-assembly-plugin.version>
+		
 		
 		<guava.version>28.2-jre</guava.version>
 			
@@ -519,12 +523,22 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-
+				<plugin>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-maven-plugin</artifactId>
+					<version>${springframework.boot.version}</version>
+				</plugin>
 				<!-- Swagger -->
 				<plugin>
 					<groupId>org.openapitools</groupId>
 					<artifactId>openapi-generator-maven-plugin</artifactId>
 					<version>${openapi.plugin.version}</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>${maven-resources-plugin.version}</version>
 				</plugin>
 
 				<!-- Generate Lombok annotation then Mapstruct classes -->
@@ -554,27 +568,58 @@
 				</plugin>
 
 				<plugin>
-					<artifactId>maven-assembly-plugin</artifactId>
-					<version>${assemby.plugin.version}</version>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>${plugin.maven-jar-plugin.version}</version>
 				</plugin>
-
+				<!-- Crée un jar contenant les javadocs du projet -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>${plugin.maven-javadoc-plugin.version}</version>
+					<configuration>
+						<source>11</source>
+						<failOnError>false</failOnError>
+						<doclint>none</doclint>
+						<quiet>true</quiet>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>${plugin.maven-assembly-plugin.version}</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-antrun-plugin</artifactId>
 					<version>${ant.plugin.version}</version>
 				</plugin>
-
+				<!-- tests unitaires -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>${maven-surefire-plugin.version}</version>
+					<configuration>
+						<argLine>-Dfile.encoding=UTF-8 --add-opens
+							java.base/java.util=ALL-UNNAMED</argLine>
+					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>${jacoco-maven-plugin.version}</version>
+				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
 				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-jar-plugin</artifactId>
-					<version>${maven.jar.plugin.version}</version>
-				</plugin>
-
 			</plugins>
 		</pluginManagement>
 	</build>
